--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'KarlaRegular';
+  src: url('./fonts/Karla-Regular.ttf');
+}
+@font-face {
+  font-family: 'KarlaLight';
+  src: url('./fonts/Karla-Light.ttf');
+}
+@font-face {
+  font-family: 'KarlaMedium';
+  src: url('./fonts/Karla-Medium.ttf');
+}
+@font-face {
+  font-family: 'KarlaBold';
+  src: url('./fonts/Karla-Bold.ttf');
+}
+@font-face {
+  font-family: 'KarlaExtraBold';
+  src: url('./fonts/Karla-ExtraBold.ttf');
+}
+@font-face {
+  font-family: 'MarkaziRegular';
+  src: url('./fonts/MarkaziText-Regular.ttf');
+}
+@font-face {
+  font-family: 'MarkaziMedium';
+  src: url('./fonts/MarkaziText-Medium.ttf');
+}
+@font-face {
+  font-family: 'MarkaziSemiBold';
+  src: url('./fonts/MarkaziText-SemiBold.ttf');
+}
+@font-face {
+  font-family: 'MarkaziBold';
+  src: url('./fonts/MarkaziText-Bold.ttf');
+}
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+nav{display: flex;justify-content: center;gap: 2rem;}
+ul{display: flex;align-items: center;gap: 2rem;}
+ul li{list-style: none;}
+ul li a{text-decoration: none; font-family:'KarlaMedium'; font-size: 20px; color: black;}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+footer{display: flex;gap: 2rem;justify-content: center;}
+.footer-links{display: flex;flex-direction: column;gap: .5rem;}
+.footer-links a{text-decoration: none; font-family:'KarlaMedium'; font-size: 20px; color: black;}
+.footer-links h2{font-family: 'KarlaExtraBold';font-size: 20px;}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+.hero-section{display: flex;justify-content: center; align-items: center;background-color: #485E57;margin-bottom: 7rem}
+.text-section{display: flex; flex-direction: column;}
+.text-section h2{font-family: 'MarkaziMedium'; font-size: 64px;color:#F4CE14}
+.text-section h3{font-family: 'MarkaziRegular'; font-size: 40px;color:white;}
+.text-section p{width: 50%;font-family: 'KarlaMedium'; font-size: 18px;color:white;}
+.text-section button{width: 200px; height:60px;font-family: 'KarlaMedium'; font-size: 18px;
+  color:black; background-color: #F4CE14; border-radius: 16px; margin-top: 1rem;border: none;}
+.hero-image img{width: 100%;max-width: 400px;height: auto; padding: 2rem 0;
+position: relative; top: 7rem; border-radius: 8%;}
 
-.App-link {
-  color: #61dafb;
-}
+.specials-section{display: flex;flex-direction: column; align-items: center; gap: 5rem; margin-bottom: 2rem;}
+.specials-title{display: flex; gap: 5rem}
+.specials-title h2{font-family: 'KarlaExtraBold'; font-size: 40px;}
+.specials-title button{width: 200px; height:60px;font-family: 'KarlaMedium'; font-size: 18px;
+  color:black; background-color: #F4CE14; border-radius: 16px; border: none;}
+.specials-items{display: flex; gap:2rem}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.card{ display: flex;flex-direction: column ;width: 264px; gap: 1rem; background-color: #EDEFEE;
+padding-bottom: 2rem; border-radius: 16px;}
+.card-image{width: 100%; border-radius: 10%;}
+.card-text{width: 80%; align-self: center;display: flex; flex-direction: column; gap: 1rem}
+.card-text p{font-family: 'KarlaRegular'; font-size: 16px; color: #495E57}
+.card-text h4{font-family: 'KarlaBold'; font-size: 16px;}
+.card-title{display: flex; align-items: center;}
+.card-title h3{font-family: 'MarkaziMedium'; font-size: 24px;}
+.card-title h4{margin-left: 1.5rem; font-family: 'KarlaBold'; font-size: 16px; color: #EE9972}
+.card-delivery{display: flex; align-items: center;}
+.card-delivery img{width: 20px;margin-left: 1rem;}
+.card-delivery a{text-decoration: none; color: black;}
