--- a/src/App.css
+++ b/src/App.css
@@ -105,6 +105,39 @@ align-items: center; padding-top: 5rem; padding-bottom: 3rem;gap:2rem}
 .about-text p{font-family: 'KarlaMedium'; font-size: 18px;}
 .img-2{position: relative;right: 20%;}
 .img-1{position: relative;top: 20%;}
+
+.reservation-section{display: grid; place-items: center; padding: 10rem 0;background-color: #485E57;}
+.reservation-section h2{font-family: 'MarkaziMedium'; font-size: 64px;color:#F4CE14; padding-bottom: 5rem;}
+form{color: white;padding: 4rem;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);}
+label{font-family: 'KarlaMedium'; font-size: 22px;}
+input{font-family: 'KarlaMedium'; font-size: 18px; opacity: .5;
+background: rgba(255, 255, 255, 0.784);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border:none; padding-left: 1rem;}
+select{font-family: 'KarlaMedium'; font-size: 18px; opacity: .5;
+background: rgba(255, 255, 255, 0.787);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(5px);
+-webkit-backdrop-filter: blur(5px);
+border:none;padding-left: 1rem;}
+.button-submit{font-family: 'KarlaExtraBold';font-size: 20px; background-color: #F4CE14; opacity: 1;
+padding: 1rem;border-radius: 16px; border: none;}
+
+.order-section{display: grid;place-items: center; padding: 8rem 0; gap: 4rem; background-color: #485E57;}
+.order-section h2{font-family: 'MarkaziMedium'; font-size: 64px; color: white;}
+.order-section button{font-family: 'KarlaExtraBold';font-size: 20px; background-color: #F4CE14; opacity: 1;
+padding: 1rem;border-radius: 16px; border: none;}
+
+
 @media (min-width: 768px) and (max-width: 1024px) {
   /* Hamburger */
   .hamburger{display: flex; flex-direction: column; gap: 8px;cursor: pointer;padding: 10px;margin-right: -10px;}
@@ -129,6 +162,8 @@ align-items: center; padding-top: 5rem; padding-bottom: 3rem;gap:2rem}
   .about-image{display: flex; flex-direction: column; gap:1rem;}
   .img-2{position: static; width: 500px;}
   .img-1{position: static; width: 500px;}
+  .order-section h2{font-size: 40px; width: 70%;}
+
 }
 
 @media (max-width: 767px) {
@@ -151,11 +186,13 @@ align-items: center; padding-top: 5rem; padding-bottom: 3rem;gap:2rem}
   .text-section{align-items: center;}
   .specials-title{flex-direction: column; align-items:center;}
   .specials-title h2{width: 40%;}
-  .testimonials{height: 150vh;}
+  .testimonials{height: 155vh;}
   .about-section{flex-direction: column; align-items: center; padding:3rem;}
   .about-text{width: 70%;}
   .about-image{display: flex; flex-direction: column; gap:1rem;}
   .img-2{position: static; width: 300px;}
   .img-1{position: static; width: 300px;}
   footer{flex-direction: column; align-items: center;}
+  form{padding: 2rem}
+  .order-section h2{font-size: 30px; width: 80%;}
 }
